// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditFlow fetches initial state from api 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <h1
      class="bp3-heading"
    >
      Member Sign in for Audit Board: 
      Audit Board #1
    </h1>
    <p>
      Enter the information below for each member of 
      Jurisdiction 1
       
      Audit Board #1
       below, then click "Next" to proceed.
    </p>
    <div
      class="sc-bxivhb cfvxmq"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      />
      <form>
        <div
          class="sc-ifAKCX iKQdjg"
        >
          <h3
            class="bp3-heading sc-bZQynM vxpym"
          >
            Audit Board Member
          </h3>
          <label
            for="[0]name"
          >
            <span
              class="sc-htoDjs flCEIS"
            >
              Full Name
            </span>
            <input
              class="sc-dnqmqq jyHOFs"
              id="[0]name"
              name="[0]name"
              value=""
            />
          </label>
          <div>
            <span
              class="sc-htoDjs flCEIS"
            >
              Party Affiliation 
              <i>
                (optional)
              </i>
            </span>
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="DEM"
                />
                <span
                  class="bp3-control-indicator"
                />
                Democrat
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="REP"
                />
                <span
                  class="bp3-control-indicator"
                />
                Republican
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="LIB"
                />
                <span
                  class="bp3-control-indicator"
                />
                Libertarian
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="IND"
                />
                <span
                  class="bp3-control-indicator"
                />
                Independent/Unaffiliated
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="[0]affiliation"
                  type="radio"
                  value=""
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-ifAKCX iKQdjg"
        >
          <h3
            class="bp3-heading sc-bZQynM vxpym"
          >
            Audit Board Member
          </h3>
          <label
            for="[1]name"
          >
            <span
              class="sc-htoDjs flCEIS"
            >
              Full Name
            </span>
            <input
              class="sc-dnqmqq jyHOFs"
              id="[1]name"
              name="[1]name"
              value=""
            />
          </label>
          <div>
            <span
              class="sc-htoDjs flCEIS"
            >
              Party Affiliation 
              <i>
                (optional)
              </i>
            </span>
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="DEM"
                />
                <span
                  class="bp3-control-indicator"
                />
                Democrat
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="REP"
                />
                <span
                  class="bp3-control-indicator"
                />
                Republican
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="LIB"
                />
                <span
                  class="bp3-control-indicator"
                />
                Libertarian
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="IND"
                />
                <span
                  class="bp3-control-indicator"
                />
                Independent/Unaffiliated
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="[1]affiliation"
                  type="radio"
                  value=""
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-intent-primary sc-gzVnrw eLDrzZ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Next
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`AuditFlow renders ballot route 1`] = `<div />`;

exports[`AuditFlow renders ballot route 2`] = `<div />`;

exports[`AuditFlow renders board table with ballots 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <div
      class="board-table-container"
    >
      <h1
        class="bp3-heading"
      >
        Audit Board #1
        : Ballot Cards to Audit
      </h1>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="sc-bdVaJa cDShCX"
      >
        <a
          class="bp3-button bp3-intent-primary"
          href="/election/1/board/123/round/1/batch/batch-id/ballot/313"
        >
          Start Auditing
        </a>
      </div>
      <div
        class="bp3-table-container bp3-table-selection-enabled"
        tabindex="0"
      >
        <div
          class="bp3-table-quadrant-stack"
        >
          <div
            class="bp3-table-quadrant bp3-table-quadrant-main"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 750px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 750px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Ballot Position"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Ballot Position
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Batch"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Batch
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Tabulator"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Tabulator
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 300px; width: 750px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="height: 300px; width: 750px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      >
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-0 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            313
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-1 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 150px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 13 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-2 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 300px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <a
                              class="bp3-button bp3-small"
                              href="/election/1/board/123/round/1/batch/batch-id/ballot/313"
                            >
                              Re-audit
                            </a>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 450px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-0 bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            2112
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-1 bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 150px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 19 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-2 bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 300px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Not Audited
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 450px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-0 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            1789
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-1 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 150px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 29 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-2 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 300px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <a
                              class="bp3-button bp3-small"
                              href="/election/1/board/123/round/1/batch/batch-id/ballot/1789"
                            >
                              Re-audit
                            </a>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 450px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-0 bp3-table-last-in-column bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 90px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            2112
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-1 bp3-table-last-in-column bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 150px; position: absolute; top: 90px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 19 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-2 bp3-table-last-in-column bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 300px; position: absolute; top: 90px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Not Audited
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-3 bp3-table-last-in-column bp3-table-last-in-row bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 450px; position: absolute; top: 90px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-table-quadrant bp3-table-quadrant-top"
            style="height: 30px; right: 0px;"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 750px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 750px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Ballot Position"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Ballot Position
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Batch"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Batch
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Tabulator"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Tabulator
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 300px; width: 750px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="width: 750px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-table-overlay-layer bp3-table-reordering-cursor-overlay"
        />
        <div
          class="bp3-table-resize-guides bp3-table-overlay-layer"
        />
        <div
          class="bp3-table-resize-sensor"
          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
        >
          <div
            class="bp3-table-resize-sensor-expand"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"
            />
          </div>
          <div
            class="bp3-table-resize-sensor-shrink"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuditFlow renders board table with completed ballots 1`] = `
<div>
  <div
    class="sc-jKJlTe fVUbzk"
  >
    <div
      class="board-table-container"
    >
      <h1
        class="bp3-heading"
      >
        Audit Board #1
        : Ballot Cards to Audit
      </h1>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="sc-bdVaJa cpRYMt"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Review Complete - Finish Round
          </span>
        </button>
      </div>
      <div
        class="sc-htpNat ehYsQA"
      />
      <div
        class="bp3-table-container bp3-table-selection-enabled"
        tabindex="0"
      >
        <div
          class="bp3-table-quadrant-stack"
        >
          <div
            class="bp3-table-quadrant bp3-table-quadrant-top"
            style="height: 30px; right: 0px;"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 1999.9999999999998px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 1999.9999999999998px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 333.3333333333333px; min-width: 0px; width: 333.3333333333333px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Ballot"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Ballot
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 333.3333333333333px; min-width: 0px; width: 333.3333333333333px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Batch"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Batch
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 333.3333333333333px; min-width: 0px; width: 333.3333333333333px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 333.3333333333333px; min-width: 0px; width: 333.3333333333333px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Tabulator"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Tabulator
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 150px; width: 1999.9999999999998px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="width: 1999.9999999999998px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-table-overlay-layer bp3-table-reordering-cursor-overlay"
        />
        <div
          class="bp3-table-resize-guides bp3-table-overlay-layer"
        />
        <div
          class="bp3-table-resize-sensor"
          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
        >
          <div
            class="bp3-table-resize-sensor-expand"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"
            />
          </div>
          <div
            class="bp3-table-resize-sensor-shrink"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuditFlow renders board table with large container size 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <div
      class="board-table-container"
    >
      <h1
        class="bp3-heading"
      >
        Audit Board #1
        : Ballot Cards to Audit
      </h1>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <div
        class="sc-bdVaJa cDShCX"
      >
        <a
          class="bp3-button bp3-intent-primary"
          href="/election/1/board/123/round/1/batch/batch-id/ballot/313"
        >
          Start Auditing
        </a>
      </div>
      <div
        class="bp3-table-container bp3-table-selection-enabled"
        tabindex="0"
      >
        <div
          class="bp3-table-quadrant-stack"
        >
          <div
            class="bp3-table-quadrant bp3-table-quadrant-main"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 2000px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 2000px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Ballot Position"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Ballot Position
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Batch"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Batch
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Tabulator"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Tabulator
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 300px; width: 2000px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="height: 300px; width: 2000px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      >
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-0 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 0px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            313
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-1 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 400px; position: absolute; top: 0px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 13 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-2 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 800px; position: absolute; top: 0px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <a
                              class="bp3-button bp3-small"
                              href="/election/1/board/123/round/1/batch/batch-id/ballot/313"
                            >
                              Re-audit
                            </a>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 1200px; position: absolute; top: 0px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-0 bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 30px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            2112
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-1 bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 400px; position: absolute; top: 30px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 19 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-2 bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 800px; position: absolute; top: 30px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Not Audited
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 1200px; position: absolute; top: 30px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-0 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 60px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            1789
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-1 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 400px; position: absolute; top: 60px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 29 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-2 bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 800px; position: absolute; top: 60px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <a
                              class="bp3-button bp3-small"
                              href="/election/1/board/123/round/1/batch/batch-id/ballot/1789"
                            >
                              Re-audit
                            </a>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-even sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 1200px; position: absolute; top: 60px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-0 bp3-table-last-in-column bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 0px; position: absolute; top: 90px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            2112
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-1 bp3-table-last-in-column bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 400px; position: absolute; top: 90px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            0003-04-Precinct 19 (Jonesboro Fire Department)
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-2 bp3-table-last-in-column bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 800px; position: absolute; top: 90px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Not Audited
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-3 bp3-table-cell-col-3 bp3-table-last-in-column bp3-table-last-in-row bp3-table-cell-ledger-odd sc-bwzfXH iBSpJa"
                          style="height: 30px; left: 1200px; position: absolute; top: 90px; width: 400px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            11
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-table-quadrant bp3-table-quadrant-top"
            style="height: 30px; right: 0px;"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 2000px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 2000px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Ballot Position"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Ballot Position
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Batch"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Batch
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 400px; min-width: 0px; width: 400px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Tabulator"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Tabulator
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                        <div
                          class="bp3-table-resize-handle-target bp3-table-resize-vertical"
                        >
                          <div
                            class="bp3-table-resize-handle"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 300px; width: 2000px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="width: 2000px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-table-overlay-layer bp3-table-reordering-cursor-overlay"
        />
        <div
          class="bp3-table-resize-guides bp3-table-overlay-layer"
        />
        <div
          class="bp3-table-resize-sensor"
          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
        >
          <div
            class="bp3-table-resize-sensor-expand"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"
            />
          </div>
          <div
            class="bp3-table-resize-sensor-shrink"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuditFlow renders correctly 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <h1
      class="bp3-heading"
    >
      Member Sign in for Audit Board: 
      Audit Board #1
    </h1>
    <p>
      Enter the information below for each member of 
      Jurisdiction 1
       
      Audit Board #1
       below, then click "Next" to proceed.
    </p>
    <div
      class="sc-bxivhb cfvxmq"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      />
      <form>
        <div
          class="sc-ifAKCX iKQdjg"
        >
          <h3
            class="bp3-heading sc-bZQynM vxpym"
          >
            Audit Board Member
          </h3>
          <label
            for="[0]name"
          >
            <span
              class="sc-htoDjs flCEIS"
            >
              Full Name
            </span>
            <input
              class="sc-dnqmqq jyHOFs"
              id="[0]name"
              name="[0]name"
              value=""
            />
          </label>
          <div>
            <span
              class="sc-htoDjs flCEIS"
            >
              Party Affiliation 
              <i>
                (optional)
              </i>
            </span>
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="DEM"
                />
                <span
                  class="bp3-control-indicator"
                />
                Democrat
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="REP"
                />
                <span
                  class="bp3-control-indicator"
                />
                Republican
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="LIB"
                />
                <span
                  class="bp3-control-indicator"
                />
                Libertarian
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="IND"
                />
                <span
                  class="bp3-control-indicator"
                />
                Independent/Unaffiliated
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="[0]affiliation"
                  type="radio"
                  value=""
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-ifAKCX iKQdjg"
        >
          <h3
            class="bp3-heading sc-bZQynM vxpym"
          >
            Audit Board Member
          </h3>
          <label
            for="[1]name"
          >
            <span
              class="sc-htoDjs flCEIS"
            >
              Full Name
            </span>
            <input
              class="sc-dnqmqq jyHOFs"
              id="[1]name"
              name="[1]name"
              value=""
            />
          </label>
          <div>
            <span
              class="sc-htoDjs flCEIS"
            >
              Party Affiliation 
              <i>
                (optional)
              </i>
            </span>
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="DEM"
                />
                <span
                  class="bp3-control-indicator"
                />
                Democrat
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="REP"
                />
                <span
                  class="bp3-control-indicator"
                />
                Republican
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="LIB"
                />
                <span
                  class="bp3-control-indicator"
                />
                Libertarian
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="IND"
                />
                <span
                  class="bp3-control-indicator"
                />
                Independent/Unaffiliated
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="[1]affiliation"
                  type="radio"
                  value=""
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-intent-primary sc-gzVnrw eLDrzZ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Next
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`AuditFlow renders member form 1`] = `<div />`;

exports[`AuditFlow renders member form 2`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <h1
      class="bp3-heading"
    >
      Member Sign in for Audit Board: 
      Audit Board #1
    </h1>
    <p>
      Enter the information below for each member of 
      Jurisdiction 1
       
      Audit Board #1
       below, then click "Next" to proceed.
    </p>
    <div
      class="sc-bxivhb cfvxmq"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      />
      <form>
        <div
          class="sc-ifAKCX iKQdjg"
        >
          <h3
            class="bp3-heading sc-bZQynM vxpym"
          >
            Audit Board Member
          </h3>
          <label
            for="[0]name"
          >
            <span
              class="sc-htoDjs flCEIS"
            >
              Full Name
            </span>
            <input
              class="sc-dnqmqq jyHOFs"
              id="[0]name"
              name="[0]name"
              value=""
            />
          </label>
          <div>
            <span
              class="sc-htoDjs flCEIS"
            >
              Party Affiliation 
              <i>
                (optional)
              </i>
            </span>
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="DEM"
                />
                <span
                  class="bp3-control-indicator"
                />
                Democrat
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="REP"
                />
                <span
                  class="bp3-control-indicator"
                />
                Republican
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="LIB"
                />
                <span
                  class="bp3-control-indicator"
                />
                Libertarian
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[0]affiliation"
                  type="radio"
                  value="IND"
                />
                <span
                  class="bp3-control-indicator"
                />
                Independent/Unaffiliated
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="[0]affiliation"
                  type="radio"
                  value=""
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-ifAKCX iKQdjg"
        >
          <h3
            class="bp3-heading sc-bZQynM vxpym"
          >
            Audit Board Member
          </h3>
          <label
            for="[1]name"
          >
            <span
              class="sc-htoDjs flCEIS"
            >
              Full Name
            </span>
            <input
              class="sc-dnqmqq jyHOFs"
              id="[1]name"
              name="[1]name"
              value=""
            />
          </label>
          <div>
            <span
              class="sc-htoDjs flCEIS"
            >
              Party Affiliation 
              <i>
                (optional)
              </i>
            </span>
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="DEM"
                />
                <span
                  class="bp3-control-indicator"
                />
                Democrat
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="REP"
                />
                <span
                  class="bp3-control-indicator"
                />
                Republican
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="LIB"
                />
                <span
                  class="bp3-control-indicator"
                />
                Libertarian
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="[1]affiliation"
                  type="radio"
                  value="IND"
                />
                <span
                  class="bp3-control-indicator"
                />
                Independent/Unaffiliated
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="[1]affiliation"
                  type="radio"
                  value=""
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-intent-primary sc-gzVnrw eLDrzZ"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Next
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;
